# kickjump

./: .envrc  .eslintignore  .eslintrc.cjs  .gitignore  Cargo.toml  Makefile.toml  devenv.nix  devenv.yaml  dprint.json  package.json  pnpm-lock.yaml  readme.md  rust-toolchain.toml  tsconfig.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/actions/devenv/: action.yml
.github/workflows/: ci.yml
apps/kickjump_com/: .gitignore  Cargo.toml  readme.md  tailwind.config.ts
apps/kickjump_com/e2e/: playwright.config.ts
apps/kickjump_com/e2e/tests/: load.test.ts
apps/kickjump_com/public/: site.manifest
apps/kickjump_com/src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs
apps/kickjump_com/src/app/: layout.rs  page.rs
apps/kickjump_com/src/app/example/: page.rs
apps/kickjump_com/src/app/login/: page.rs
apps/kickjump_com/src/components/: footer.rs  hero.rs  mod.rs  navbar.rs  seo.rs
apps/kickjump_com/src/server/: compression.rs  error.rs  fileserver.rs  mod.rs  prisma.rs  ratelimit.rs
apps/kj/: Cargo.toml
crates/prisma_cli/: Cargo.toml
crates/prisma_client/: Cargo.toml
infra/: Pulumi.yaml  index.ts  pnpm-lock.yaml
prisma/: schema.prisma
setup/: cache-versions.json
setup/editors/vscode/: extensions.json  settings.json
