[workspace]
members = ["apps/*", "crates/*"]
default-members = ["apps/*", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
homepage = "https://kickjump.com"
repository = "https://github.com/ifiokjr/kickjump"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2021"
license = "BSD 3-Clause"
rust-version = "1.73.0"

[workspace.dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anchor-syn = "0.29.0"
axum = "0.6"
bcrypt = "0.15"
bytemuck = "1"
cfg-if = "1"
chrono = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
dotenvy = "0.15"
heck = "0.4"
http = "0.2"
insta = "1"
js-sys = "0.3"
leptos = "0.5"
leptos-use = "0.8"
leptos_axum = "0.5"
leptos_meta = "0.5"
leptos_router = "0.5"
log = "0.4"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10" }
readonly = "0.2"
regex = "1"
rstest = "0.18"
rstest_reuse = "0.6"
rstml = "0.11"
serde = "1"
serde_json = "1"
serde-wasm-bindgen = "0.6"
similar-asserts = "1"
simple_logger = "4"
solana-client = "1.17.3"
solana-program = "1.17.3"
solana-sdk = "1.17.3"
spl-token = "4"
syn = "2"
thiserror = "1"
tokio = "1"
tower = "0.4"
tower_governor = "0.1"
tower-http = "0.4"
tracing = "0.1"
typed-builder = "0.18"
uint = "0.9"
wasm-bindgen = "0.2"
web-sys = "0.3"

# crates
prisma_client = { path = "./crates/prisma_client", version = "0.0.0" }
prisma_cli = { path = "./crates/prisma_cli", version = "0.0.0" }

[workspace.metadata.bin]
anchor-cli = { version = "0.29.0", bins = ["anchor"] }
cargo-leptos = { version = "0.2.0" }
