[package]
name = "kickjump_com"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
rust = { version.workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { workspace = true, optional = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
http = { workspace = true }
leptos = { workspace = true, features = ["nightly"] }
leptos-use = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true, features = ["nightly"] }
leptos_router = { workspace = true, features = ["nightly"] }
log = { workspace = true }
prisma-client-rust = { workspace = true, optional = true }
prisma_client = { workspace = true, optional = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
simple_logger = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["fs"], optional = true }
tower_governor = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Blob", "File", "FileList", "HtmlDialogElement", "HtmlDocument", "HtmlInputElement", "Url"] }

[features]
prod = ["compression", "ratelimit"]
compression = ["tower-http?/compression-full"]
ratelimit = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
	"dep:axum",
	"dep:leptos_axum",
	"dep:prisma_client",
	"dep:prisma-client-rust",
	"dep:simple_logger",
	"dep:tokio",
	"dep:tower-http",
	"dep:tower",
	"dep:tracing",
	"leptos_meta/ssr",
	"leptos_router/ssr",
	"leptos-use/ssr",
	"leptos/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "kickjump_com"
site-root = "target/site/kickjump_com"
site-pkg-dir = "pkg"
style-file = "style/output.css"
assets-dir = "public"
site-addr = "127.0.0.1:53124"
reload-port = 53125
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
