[package]
name = "prisma_client"
version = { workspace = true }
edition = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
